Menu z-index fixed

--- a/css/about.css
+++ b/css/about.css
@@ -2,43 +2,44 @@
 /*#e24594*/
 /*#6cd0ff*/
 
-
-body{
-	background-color: #282828;
-	font-size: 40px;
-	font-family: "Ceviche One", sans-serif;
+.page-heading::after {
+  content: "About Us";
+}
+body {
+  background-color: #282828;
+  font-size: 40px;
+  font-family: "Ceviche One", sans-serif;
 }
 
-main{
-	
-	z-index: 8;
+main {
+  z-index: 8;
 }
 
-.side{
-	vertical-align: middle;
-	padding: 2%;
+.side {
+  vertical-align: middle;
+  padding: 2%;
 }
 
-#side1{
-	color: white;
-	width: 50%;
+#side1 {
+  color: white;
+  width: 50%;
   text-align: justify;
 }
 
-#side2{
+#side2 {
   margin: 5% 0;
   color: #6cd0ff;
   width: 40%;
 }
 
-h3{
+h3 {
   margin: 0;
   padding: 0;
   display: inline-block;
 }
 
-.stats{
-	margin-top: 5%;
+.stats {
+  margin-top: 5%;
   display: inline-block;
 }
 
@@ -54,76 +55,76 @@ h3{
   border-radius: 50%;
   }*/
 
-  .digits,
-  .digits .digit {
-    display: inline-block;
-  }
+.digits,
+.digits .digit {
+  display: inline-block;
+}
 
-  .digits .top-half-wrapper, 
-  .digits .bottom-half-wrapper {
-    position: relative;
-    width: 8vw;
-    height: 50px;
-  }
+.digits .top-half-wrapper,
+.digits .bottom-half-wrapper {
+  position: relative;
+  width: 8vw;
+  height: 50px;
+}
 
-  .digits .top-half, 
-  .digits .bottom-half {
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0;  
+.digits .top-half,
+.digits .bottom-half {
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  text-shadow: 0px 1px 0px #fafafa;
+  text-align: center;
+  font-family: helvetica, sans;
+  font-weight: bold;
+  font-size: 80px;
+}
+
+.digits .top-half {
+  color: #333;
+  background: #fff;
+  border-radius: 10px 10px 0px 0px;
+  line-height: 100px;
+  -webkit-transform-origin: 50% 100%;
+  -moz-transform-origin: 50% 100%;
+
+  -webkit-transform: perspective(300) rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+}
+
+.digits .bottom-half {
+  line-height: 0;
+  color: #222;
+  background: #e5e5e5;
+  border-radius: 0px 0px 10px 10px;
+  -webkit-transform-origin: 50% 0%;
+  -moz-transform-origin: 50% 0%;
+
+  -webkit-transform: perspective(300) rotateX(90deg);
+  -moz-transform: rotateX(90deg);
+}
+
+.digits .show {
+  z-index: 10;
+
+  -webkit-transform: perspective(300) rotateX(0deg);
+  -moz-transform: rotateX(0deg);
+}
+
+.digits .roll-over {
+  -webkit-transform: perspective(300) rotateX(-90deg);
+  -moz-transform: rotateX(-90deg);
+}
+
+@media screen and (max-width: 900px) {
+  #side1,
+  #side2 {
     width: 100%;
-    height: 50px;
-    text-shadow: 0px 1px 0px #fafafa;
-    text-align: center;
-    font-family: helvetica, sans;
-    font-weight: bold;
-    font-size: 80px;
   }
-
-  .digits .top-half {
-    color: #333;
-    background: #fff;
-    border-radius: 10px 10px 0px 0px;
-    line-height: 100px;
-    -webkit-transform-origin: 50% 100%;
-    -moz-transform-origin: 50% 100%;
-    
-    -webkit-transform: perspective(300) rotateX(0deg);  
-    -moz-transform: rotateX(0deg);  
+  .digits .top-half-wrapper,
+  .digits .bottom-half-wrapper {
+    width: 80px;
   }
-
-  .digits .bottom-half {
-    line-height: 0;
-    color: #222;
-    background: #e5e5e5;
-    border-radius: 0px 0px 10px 10px ;
-    -webkit-transform-origin: 50% 0%;
-    -moz-transform-origin: 50% 0%;
-
-    -webkit-transform: perspective(300) rotateX(90deg);
-    -moz-transform: rotateX(90deg);
-  }
-
-  .digits .show {
-    z-index: 10;
-
-    -webkit-transform: perspective(300) rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-  }
-
-  .digits .roll-over {
-    -webkit-transform: perspective(300) rotateX(-90deg);
-    -moz-transform: rotateX(-90deg);
-  }
-
-
-  @media screen and (max-width: 900px) {
-    #side1, #side2{
-      width: 100%;
-    }
-    .digits .top-half-wrapper, 
-    .digits .bottom-half-wrapper {
-      width: 80px;
-    }
-  }
+}
