--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,11 @@
+.page-heading::after {
+  content: "Gallery";
+}
+
 #demo-page {
-	display: flex;
-	height: 70vh;
-	text-align: center;
+  display: flex;
+  height: 70vh;
+  text-align: center;
 }
 
 /*#main-container {
@@ -25,106 +29,106 @@
 }*/
 
 #images-wrapper {
-	width: 50vw;
-	height: 380px;
-	margin: 0px auto 40px;
-	position: relative;
-	border-radius: 10px;
-	border: 5px solid white;
+  width: 50vw;
+  height: 380px;
+  margin: 0px auto 40px;
+  position: relative;
+  border-radius: 10px;
+  border: 5px solid white;
 }
 
 #images-wrapper.origin-left .image-wrapper {
-	transform-origin: right;
+  transform-origin: right;
 }
 
 #images-wrapper.origin-right .image-wrapper {
-	transform-origin: left;
+  transform-origin: left;
 }
 
 .image-wrapper {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	box-shadow: 0 50px 100px #e2459385, 0 15px 35px #e2459385;
-	opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 50px 100px #e2459385, 0 15px 35px #e2459385;
+  opacity: 0;
 }
 
 .image-wrapper.active {
-	opacity: 1;
+  opacity: 1;
 }
 
 .image-wrapper img {
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
 .controls-wrapper {
-	display: inline-block;
+  display: inline-block;
 }
 
 .controls {
-	display: flex;
-	justify-content: center;
-	position: relative;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
 
 .controls.disabled .dot {
-	pointer-events: none;
+  pointer-events: none;
 }
 
 #circular-line {
-	position: absolute;
-	top: 0;
-	left: 0;
-	pointer-events: none;
-	transform: rotate(90deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  transform: rotate(90deg);
 }
 
 #circular-line.flip {
-	transform: rotate(90deg) scaleY(-1);
+  transform: rotate(90deg) scaleY(-1);
 }
 
 #circular-line-path {
-	stroke-dasharray: 106;
-	stroke-dashoffset: 0;
-	stroke-linejoin: round;
-	stroke-linecap: round;
-	stroke: #F6A4EB;
+  stroke-dasharray: 106;
+  stroke-dashoffset: 0;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  stroke: #f6a4eb;
 }
 
 .straight-line {
-	position: absolute;
-	left: 0;
-	right: 0;
-	width: 100%;
-	bottom: 0;
-	height: 4px;
-	background: #F6A4EB;
-	border-radius: 3px;
-	transform-origin: left;
-	transform: scaleX(0);
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  bottom: 0;
+  height: 4px;
+  background: #f6a4eb;
+  border-radius: 3px;
+  transform-origin: left;
+  transform: scaleX(0);
 }
 
 svg {
-	display: block;
+  display: block;
 }
 
 .dot {
-	width: 14px;
-	height: 14px;
-	background: #ddd;
-	border-radius: 50%;
-	margin: 12px;
-	cursor: pointer;
-	transform: scale(.85);
-	transition: .3s all ease;
+  width: 14px;
+  height: 14px;
+  background: #ddd;
+  border-radius: 50%;
+  margin: 12px;
+  cursor: pointer;
+  transform: scale(0.85);
+  transition: 0.3s all ease;
 }
 
 .dot.active {
-	background: #9251AC;
-	transform: scale(1.1);
+  background: #9251ac;
+  transform: scale(1.1);
 }
