--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@ body {
 }
 
 .magicm {
-  z-index: 5;
+  z-index: 5000;
   position: absolute;
   top: calc(50% - 10rem);
   left: calc(50% - 10rem);
@@ -18,7 +18,7 @@ body {
 }
 
 .magics {
-  z-index: 5;
+  z-index: 5000;
   position: absolute;
   top: calc(50% - 10rem);
   left: calc(50% - 10rem);
@@ -35,9 +35,8 @@ body {
   font-size: 150px;
   width: 100vw;
   overflow: hidden;
-  z-index: 5;
   font-family: "Ceviche One", sans-serif;
-  z-index: 10;
+  z-index: 10000;
 }
 p span {
   font-size: 40px;
@@ -52,7 +51,7 @@ p a {
 
 #menu {
   position: fixed;
-  z-index: 20;
+  z-index: 20000;
 }
 
 .menu-heading {
@@ -60,7 +59,7 @@ p a {
   top: -60px;
   left: 60px;
   margin-bottom: 0;
-  z-index: 10;
+  z-index: 10000;
   font-family: "Sedgwick Ave Display", sans-serif;
   font-size: 4.5rem;
   color: #e24594;
@@ -117,7 +116,7 @@ p a {
   font-family: "Josefin Sans", sans-serif;
   color: #fff;
   cursor: pointer;
-  z-index: 25;
+  z-index: 25000;
 }
 .menu::before,
 .menu::after {
@@ -154,7 +153,7 @@ p a {
 
 .check-out {
   width: 100vw;
-  z-index: 10;
+  z-index: 10000;
   position: fixed;
   bottom: 10%;
   left: 0%;
@@ -201,7 +200,7 @@ p a {
   position: absolute;
   height: 100vh;
   width: 100vw;
-  z-index: 3;
+  z-index: 3000;
   top: 0;
   left: 0;
   right: 0;
